--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Sun May 13 22:01:17 GMT+07:00 2012
-#Sun May 13 22:01:17 GMT+07:00 2012
+#Updated at Mon May 14 16:42:56 ICT 2012
+#Mon May 14 16:42:56 ICT 2012
 application_name=Em2012
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
@@ -56,9 +56,11 @@ label_eu_zomtec_em2012_domain_teamgroup_id=Id
 label_eu_zomtec_em2012_domain_teamgroup_name=Name
 label_eu_zomtec_em2012_domain_teamgroup_plural=Team Groups
 label_eu_zomtec_em2012_domain_teamgroup_version=Version
+label_start_index=Start Controller View
 menu_category_bet_label=Bet
 menu_category_betuser_label=Bet User
 menu_category_betuserrole_label=Bet User Role
+menu_category_controller_label=Controller
 menu_category_game_label=Game
 menu_category_gamegroup_label=Game Group
 menu_category_team_label=Team
@@ -69,6 +71,7 @@ menu_item_betuser_list_label=Bet Users
 menu_item_betuser_new_label=Bet User
 menu_item_betuserrole_list_label=Bet User Roles
 menu_item_betuserrole_new_label=Bet User Role
+menu_item_controller__startindex_id_label=Start Controller View
 menu_item_game_list_label=Games
 menu_item_game_new_label=Game
 menu_item_gamegroup_list_label=Game Groups
