--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -97,3 +97,22 @@ security_login_form_password=Password
 security_login_form_password_message=Enter your password
 security_login_unsuccessful=Your login attempt was not successful, try again. Reason: 
 security_logout=Logout
+
+
+#start
+game_groups=Groups
+game_group_gruppe_a=Group A
+game_group_gruppe_b=Group B
+game_group_gruppe_c=Group C
+game_group_gruppe_d=Group D
+game_group_viertelfinale=Quarter-finals
+game_group_halbfinale=Semi-finals
+game_group_finale=Final
+
+
+team_deutschland=Germany
+
+game_status_running=RUNNING
+game_status_upcomming=SCHEDULED
+game_status_finished=FINISHED
+game_status_recalculate=FINISHED (Scores will be recalculated)
