--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Mon May 14 16:42:56 ICT 2012
-#Mon May 14 16:42:56 ICT 2012
+#Updated at Wed May 16 17:42:09 ICT 2012
+#Wed May 16 17:42:09 ICT 2012
 application_name=Em2012
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
@@ -27,6 +27,7 @@ label_eu_zomtec_em2012_domain_betuserrole_name=Name
 label_eu_zomtec_em2012_domain_betuserrole_plural=Bet User Roles
 label_eu_zomtec_em2012_domain_betuserrole_version=Version
 label_eu_zomtec_em2012_domain_game=Game
+label_eu_zomtec_em2012_domain_game_externalgameid=External Game Id
 label_eu_zomtec_em2012_domain_game_gamegroup=Game Group
 label_eu_zomtec_em2012_domain_game_gamestatus=Game Status
 label_eu_zomtec_em2012_domain_game_id=Id
