--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -116,3 +116,11 @@ game_status_running=RUNNING
 game_status_upcomming=SCHEDULED
 game_status_finished=FINISHED
 game_status_recalculate=FINISHED (Scores will be recalculated)
+
+game_bets=Placed bets
+
+bet_score_group_=BETS
+bet_score_group_4=RESULT (+4)
+bet_score_group_3=GOAL DIFFERENCE (+3)
+bet_score_group_2=WINNER (+2)
+bet_score_group_0=NOTHING
