--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed May 16 17:42:09 ICT 2012
-#Wed May 16 17:42:09 ICT 2012
+#Updated at Thu May 17 11:25:33 ICT 2012
+#Thu May 17 11:25:33 ICT 2012
 application_name=Em2012
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
@@ -15,6 +15,7 @@ label_eu_zomtec_em2012_domain_bet_scorehome=Score Home
 label_eu_zomtec_em2012_domain_bet_scoretype=Score Type
 label_eu_zomtec_em2012_domain_bet_version=Version
 label_eu_zomtec_em2012_domain_betuser=Bet User
+label_eu_zomtec_em2012_domain_betuser_enabled=Enabled
 label_eu_zomtec_em2012_domain_betuser_id=Id
 label_eu_zomtec_em2012_domain_betuser_password=Password
 label_eu_zomtec_em2012_domain_betuser_plural=Bet Users
