--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -109,7 +109,6 @@ game_group_viertelfinale=Quarter-finals
 game_group_halbfinale=Semi-finals
 game_group_finale=Final
 
-
 team_deutschland=Germany
 
 game_status_running=RUNNING
@@ -124,3 +123,16 @@ bet_score_group_4=RESULT (+4)
 bet_score_group_3=GOAL DIFFERENCE (+3)
 bet_score_group_2=WINNER (+2)
 bet_score_group_0=NOTHING
+
+scores_temp=Current standings
+scores_temp_description=This score-board is updated after each goal.
+
+scores_final=Final standings
+scores_final_description=This score-board is updated after each match.
+
+
+score_boards=Score boards
+
+score_board_description=The user with the highest amount of points after all 31 games of the EURO 2012 will be the winner of this competition.
+
+introduction=The user with the highest amount of points after all 31 games of the EURO 2012 will be the winner of this competition.
