--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Thu May 17 11:25:33 ICT 2012
-#Thu May 17 11:25:33 ICT 2012
+#Updated at Thu May 17 16:22:04 ICT 2012
+#Thu May 17 16:22:04 ICT 2012
 application_name=Em2012
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
@@ -46,6 +46,13 @@ label_eu_zomtec_em2012_domain_gamegroup_name=Name
 label_eu_zomtec_em2012_domain_gamegroup_plural=Game Groups
 label_eu_zomtec_em2012_domain_gamegroup_sortorder=Sort Order
 label_eu_zomtec_em2012_domain_gamegroup_version=Version
+label_eu_zomtec_em2012_domain_news=News
+label_eu_zomtec_em2012_domain_news_creation=Creation
+label_eu_zomtec_em2012_domain_news_id=Id
+label_eu_zomtec_em2012_domain_news_plural=News Items
+label_eu_zomtec_em2012_domain_news_text=Text
+label_eu_zomtec_em2012_domain_news_title=Title
+label_eu_zomtec_em2012_domain_news_version=Version
 label_eu_zomtec_em2012_domain_team=Team
 label_eu_zomtec_em2012_domain_team_externalteamid=External Team Id
 label_eu_zomtec_em2012_domain_team_id=Id
@@ -58,6 +65,7 @@ label_eu_zomtec_em2012_domain_teamgroup_id=Id
 label_eu_zomtec_em2012_domain_teamgroup_name=Name
 label_eu_zomtec_em2012_domain_teamgroup_plural=Team Groups
 label_eu_zomtec_em2012_domain_teamgroup_version=Version
+label_public_index=Public Controller View
 label_start_index=Start Controller View
 menu_category_bet_label=Bet
 menu_category_betuser_label=Bet User
@@ -65,6 +73,7 @@ menu_category_betuserrole_label=Bet User Role
 menu_category_controller_label=Controller
 menu_category_game_label=Game
 menu_category_gamegroup_label=Game Group
+menu_category_news_label=News
 menu_category_team_label=Team
 menu_category_teamgroup_label=Team Group
 menu_item_bet_list_label=Bets
@@ -73,11 +82,14 @@ menu_item_betuser_list_label=Bet Users
 menu_item_betuser_new_label=Bet User
 menu_item_betuserrole_list_label=Bet User Roles
 menu_item_betuserrole_new_label=Bet User Role
+menu_item_controller__publicindex_id_label=Public Controller View
 menu_item_controller__startindex_id_label=Start Controller View
 menu_item_game_list_label=Games
 menu_item_game_new_label=Game
 menu_item_gamegroup_list_label=Game Groups
 menu_item_gamegroup_new_label=Game Group
+menu_item_news_list_label=News Items
+menu_item_news_new_label=News
 menu_item_team_list_label=Teams
 menu_item_team_new_label=Team
 menu_item_teamgroup_list_label=Team Groups
