--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -136,3 +136,17 @@ score_boards=Score boards
 score_board_description=The user with the highest amount of points after all 31 games of the EURO 2012 will be the winner of this competition.
 
 introduction=The user with the highest amount of points after all 31 games of the EURO 2012 will be the winner of this competition.
+
+
+news=News
+start=Start
+games=Games
+scores=Scores
+admin=Admin
+logout=Logout
+login=Login
+register=Register
+
+top5=Top 5
+your_ranking=Your ranking
+upcomming_games=Upcomming games
