--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Thu May 17 16:22:04 ICT 2012
-#Thu May 17 16:22:04 ICT 2012
+#Updated at Fri May 18 14:06:45 ICT 2012
+#Fri May 18 14:06:45 ICT 2012
 application_name=Em2012
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
@@ -15,8 +15,10 @@ label_eu_zomtec_em2012_domain_bet_scorehome=Score Home
 label_eu_zomtec_em2012_domain_bet_scoretype=Score Type
 label_eu_zomtec_em2012_domain_bet_version=Version
 label_eu_zomtec_em2012_domain_betuser=Bet User
+label_eu_zomtec_em2012_domain_betuser_email=Email
 label_eu_zomtec_em2012_domain_betuser_enabled=Enabled
 label_eu_zomtec_em2012_domain_betuser_id=Id
+label_eu_zomtec_em2012_domain_betuser_money=Money
 label_eu_zomtec_em2012_domain_betuser_password=Password
 label_eu_zomtec_em2012_domain_betuser_plural=Bet Users
 label_eu_zomtec_em2012_domain_betuser_roles=Roles
