--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -152,3 +152,9 @@ your_ranking=Your ranking
 upcomming_games=Upcomming games
 
 more=More
+
+register_description=To join the competion you will have to create your personal account first. Everyone who is taking part needs to pay at least 200.000 VND as wager. After the last game of the EURO 2012 the money will be shared to the people who are in the TOP 3.
+
+message_registration_error_title=Errors:
+message_registration_success_title=Thank you for your registation
+message_registration_success_text=To activate your account you need to place the wager. Truong Anh Vu will take care of this. After activating your account you will be able to login and place your bets.
