--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -109,7 +109,26 @@ game_group_viertelfinale=Quarter-finals
 game_group_halbfinale=Semi-finals
 game_group_finale=Final
 
+points_factor_1=
+points_factor_2=(Double Points)
+points_factor_3=(Triple Points)
+
+team_polen=Poland
+team_ukraine=Ukraine
 team_deutschland=Germany
+team_italien=Italy
+team_niederlande=Netherlands
+team_spanien=Spain
+team_england=England
+team_daenemark=Denmark
+team_frankreich=France
+team_griechenland=Greece
+team_russland=Russia
+team_schweden=Sweden
+team_irland=Ireland
+team_kroatien=Croatia
+team_portugal=Portugal
+team_tschechien=Czech
 
 game_status_running=RUNNING
 game_status_upcomming=SCHEDULED
@@ -133,10 +152,7 @@ scores_final_description=This score-board is updated after each match.
 
 score_boards=Score boards
 
-score_board_description=The user with the highest amount of points after all 31 games of the EURO 2012 will be the winner of this competition.
-
-introduction=The user with the highest amount of points after all 31 games of the EURO 2012 will be the winner of this competition.
-
+score_board_description=The complete Jackpot will be awarded to the TOP 3 attendees.
 
 news=News
 start=Start
@@ -153,7 +169,7 @@ upcomming_games=Upcomming games
 
 more=More
 
-register_description=To join the competion you will have to create your personal account first. Everyone who is taking part needs to pay at least 200.000 VND as wager. After the last game of the EURO 2012 the money will be shared to the people who are in the TOP 3.
+register_description=To join the competion you will have to create your personal account first. Everyone who is taking part needs to pay at least 300.000 VND as wager (girls 150.000 VND). After the last game of the EURO 2012 the money will be shared to the people who are in the TOP 3.
 
 message_registration_error_title=Errors:
 message_registration_success_title=Thank you for your registation
