--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Fri May 18 14:06:45 ICT 2012
-#Fri May 18 14:06:45 ICT 2012
+#Updated at Fri May 18 18:00:03 ICT 2012
+#Fri May 18 18:00:03 ICT 2012
 application_name=Em2012
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
@@ -43,6 +43,7 @@ label_eu_zomtec_em2012_domain_game_teamaway=Team Away
 label_eu_zomtec_em2012_domain_game_teamhome=Team Home
 label_eu_zomtec_em2012_domain_game_version=Version
 label_eu_zomtec_em2012_domain_gamegroup=Game Group
+label_eu_zomtec_em2012_domain_gamegroup_factor=Factor
 label_eu_zomtec_em2012_domain_gamegroup_id=Id
 label_eu_zomtec_em2012_domain_gamegroup_name=Name
 label_eu_zomtec_em2012_domain_gamegroup_plural=Game Groups
