--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -110,8 +110,9 @@ game_group_halbfinale=Semi-finals
 game_group_finale=Final
 
 points_factor_1=
-points_factor_2=(Double Points)
-points_factor_3=(Triple Points)
+points_factor_2= (2x Points)
+points_factor_3= (3x Points)
+points_factor_4= (4x Points)
 
 team_polen=Poland
 team_ukraine=Ukraine
