--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,6 +1,7 @@
-#Updated at Fri May 18 18:00:03 ICT 2012
-#Fri May 18 18:00:03 ICT 2012
+#Updated at Sat May 19 15:43:31 GMT+07:00 2012
+#Sat May 19 15:43:31 GMT+07:00 2012
 application_name=Em2012
+label_admin_index=Admin Controller View
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
 label_eu_zomtec_em2012_domain_bet_betuser=Bet User
@@ -85,6 +86,7 @@ menu_item_betuser_list_label=Bet Users
 menu_item_betuser_new_label=Bet User
 menu_item_betuserrole_list_label=Bet User Roles
 menu_item_betuserrole_new_label=Bet User Role
+menu_item_controller__adminindex_id_label=Admin Controller View
 menu_item_controller__publicindex_id_label=Public Controller View
 menu_item_controller__startindex_id_label=Start Controller View
 menu_item_game_list_label=Games
