--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -31,6 +31,7 @@ entity_reference_not_managed=This relationship is managed from the {0} side.
 #button labels
 button_home=Home
 button_save=Save
+button_login=Login
 button_update=Update
 button_find=Find
 button_cancel=Cancel
@@ -135,6 +136,11 @@ game_status_running=RUNNING
 game_status_upcomming=SCHEDULED
 game_status_finished=FINISHED
 game_status_recalculate=FINISHED (Scores will be recalculated)
+
+game_status_short_running=LIVE
+game_status_short_upcomming=SOON
+game_status_short_finished=ENDED
+game_status_short_recalculate=ENDED
 
 game_bets=Placed bets
 
