--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -98,6 +98,7 @@ security_login_form_password=Password
 security_login_form_password_message=Enter your password
 security_login_unsuccessful=Your login attempt was not successful, try again. If you account has not been activated yet you have to pay the wager to Truong Anh Vu and he will activate your account. Reason: 
 security_logout=Logout
+security_login_form_remember=Remember
 
 
 #start
