--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,6 +1,6 @@
 #Updated at Sat May 19 15:43:31 GMT+07:00 2012
 #Sat May 19 15:43:31 GMT+07:00 2012
-application_name=Em2012
+application_name=EURO 2012
 label_admin_index=Admin Controller View
 label_eu_zomtec_em2012_domain_bet=Bet
 label_eu_zomtec_em2012_domain_bet_betstatus=Bet Status
