Setup teams and bootstrap for wm2014

--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -107,7 +107,15 @@ game_group_gruppe_a=Group A
 game_group_gruppe_b=Group B
 game_group_gruppe_c=Group C
 game_group_gruppe_d=Group D
+game_group_gruppe_e=Group E
+game_group_gruppe_f=Group F
+game_group_gruppe_g=Group G
+game_group_gruppe_h=Group H
+game_group_gruppe_i=Group I
+game_group_gruppe_j=Group J
+game_group_spiel_um_platz_3=Play-off for third place
 game_group_viertelfinale=Quarter-finals
+game_group_achtelfinale=Round of 16
 game_group_halbfinale=Semi-finals
 game_group_finale=Final
 
@@ -177,8 +185,8 @@ upcomming_games=Upcomming games
 
 more=More
 
-register_description=To join the competion you will have to create your personal account first. Everyone who is taking part needs to pay at least 300.000 VND as wager (girls 150.000 VND). After the last game of the EURO 2012 the money will be shared to the people who are in the TOP 3.
+register_description=Description
 
 message_registration_error_title=Errors:
 message_registration_success_title=Thank you for your registation
-message_registration_success_text=To activate your account you need to place the wager. Truong Anh Vu will take care of this. After activating your account you will be able to login and place your bets.
+message_registration_success_text=Activation text
